applications/APP-000018/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: APP-000018
  namespace: nattest

spec:
  replicas: 1

  selector:
    matchLabels:
      app: APP-000018

  template:
    metadata:
      labels:
        app: APP-000018

    spec:
      containers:
      - name: APP-000018
        image: nginx:latest

        ports:
        - containerPort: 80
