applications/APP-000018/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: APP-000018
  namespace: nattest

spec:
  selector:
    app: APP-000018

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
