applications/APP-000018/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: APP-000018
  namespace: nattest

spec:
  ingressClassName: nginx

  rules:
  - host: APP-000018.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: APP-000018

            port:
              number: 80
